--- a/roles/config-bashrc/templates/bashrc.j2
+++ b/roles/config-bashrc/templates/bashrc.j2
@@ -6,7 +6,7 @@ alias rm='rm -i'
 alias cp='cp -i'
 alias mv='mv -i'
 
-export PATH=/root/linux-amd64:$PATH
+export PATH=/root/go/bin:/root/linux-amd64:$PATH
 
 # Source global definitions
 if [ -f /etc/bashrc ]; then
