--- a/roles/dck-jenkins/templates/nginx.j2
+++ b/roles/dck-jenkins/templates/nginx.j2
@@ -3,26 +3,13 @@ server {
     access_log  /var/log/nginx/jenkins.access.log;
     error_log   /var/log/nginx/jenkins.error.log;
 
-    listen 80;
+    listen 443 ssl; # managed by Certbot
     server_name jenkins.{{domaine}};
 
-	# ssl_certificate      /etc/pki/tls/certs/STAR_vif_fr-chained.crt;
-	# ssl_certificate_key  /etc/pki/tls/private/STAR_vif_fr.key;
- 	# ssl_session_cache shared:SSL:1m;
-	# ssl_session_timeout  5m;
-	# ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-	# CF https://weakdh.org/sysadmin.html
-	# ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA!DES-CBC3-SHA';
-	# ssl_prefer_server_ciphers   on;
-
-	# CF https://weakdh.org/sysadmin.html
-	# ssl_dhparam /etc/nginx/dhparams.pem;
-
-	# OCSP Stapling
-	#ssl_stapling on;
-	#ssl_stapling_verify on;
-	#ssl_trusted_certificate /etc/ssl/certs/STAR_vif_fr.ca-bundle;
+    ssl_certificate /etc/letsencrypt/live/nexus.coface.softeamgroup.fr/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/nexus.coface.softeamgroup.fr/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 	location / {
 
