--- a/roles/dck-app/templates/service.j2
+++ b/roles/dck-app/templates/service.j2
@@ -4,8 +4,8 @@ Requires=docker.service
 
 [Service]
 ExecStartPre=/bin/sleep 1
-ExecStartPre=/bin/docker pull registry.coface.softeamgroup.fr/repository/docker/testproject
-ExecStart=/bin/docker run --restart=always --name=systemd_app -p 8080:80 registry.coface.softeamgroup.fr/repository/docker/testproject
+ExecStartPre=/bin/docker pull registry.coface.softeamgroup.fr/repository/docker/testproject:{{app_version}}
+ExecStart=/bin/docker run --restart=always --name=systemd_app -p 8080:80 registry.coface.softeamgroup.fr/repository/docker/testproject:{{app_version}}
 ExecStop=/bin/docker stop systemd_app
 ExecStopPost=/bin/docker rm -f systemd_app
 ExecReload=/bin/docker restart systemd_app
