--- a/roles/k8s-backup/templates/backup.j2
+++ b/roles/k8s-backup/templates/backup.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 spec:
   # activeDeadlineSeconds: 100
-  schedule: "0 */12 * * *"
+  schedule: "*/1 * * * *"
   jobTemplate:
     spec:
       template:
