--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -1,5 +1,9 @@
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: InitConfiguration
+apiServerExtraArgs:
+  cloud-provider: aws
+controllerManagerExtraArgs:
+  cloud-provider: aws
 nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: aws
