--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -1,4 +1,9 @@
 apiVersion: kubeadm.k8s.io/v1beta1
+kind: MasterConfiguration
+cloud-provider: aws
+
+---
+apiVersion: kubeadm.k8s.io/v1beta1
 kind: InitConfiguration
 apiServerExtraArgs:
   cloud-provider: aws
