--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -1,14 +1,16 @@
 apiVersion: kubeadm.k8s.io/v1beta1
-kind: MasterConfiguration
-cloud-provider: aws
+kind: ClusterConfiguration
+apiServer:
+  extraArgs:
+    cloud-provider: aws
+clusterName: k8.test.ippon.com
+controllerManager:
+  extraArgs:
+    cloud-provider: aws
 
 ---
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: InitConfiguration
-apiServerExtraArgs:
-  cloud-provider: aws
-controllerManagerExtraArgs:
-  cloud-provider: aws
 nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: aws
