--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -14,3 +14,8 @@ kind: InitConfiguration
 nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: aws
+
+---
+apiVersion: kubeadm.k8s.io/v1beta1
+kind: MasterConfiguration
+cloud-provider: aws
