--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -1,9 +1,9 @@
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: ClusterConfiguration
+clusterName: k8.test.ippon.com
 apiServer:
   extraArgs:
     cloud-provider: aws
-clusterName: k8.test.ippon.com
 controllerManager:
   extraArgs:
     cloud-provider: aws
@@ -19,3 +19,10 @@ nodeRegistration:
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: MasterConfiguration
 cloud-provider: aws
+
+----
+apiVersion: kubeadm.k8s.io/v1beta1
+kind: JoinConfiguration
+nodeRegistration:
+  kubeletExtraArgs:
+    cloud-provider: "aws"
