--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -23,6 +23,7 @@ cloud-provider: aws
 ---
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: JoinConfiguration
+cloud-provider: aws
 nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: "aws"
