--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -27,3 +27,8 @@ cloud-provider: aws
 nodeRegistration:
   kubeletExtraArgs:
     cloud-provider: "aws"
+
+---
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+cloud-provider: aws
