--- a/roles/k8s-master/templates/kubeadm-init.j2
+++ b/roles/k8s-master/templates/kubeadm-init.j2
@@ -3,7 +3,7 @@ kind: ClusterConfiguration
 apiServer:
   extraArgs:
     cloud-provider: aws
-clusterName: k8.test.ippon.com
+clusterName: k8s.melkouhen.net
 controllerManager:
   extraArgs:
     cloud-provider: aws
